--- a/chapter03.qmd
+++ b/chapter03.qmd
@@ -1,110 +1,167 @@
 ---
-title: "Programable Logical Control (PLC)"
+title: "Programmable Logic Control (PLC)"
 author: "Thomas M. Rudolf"
 format: html
 editor: visual
 ---
 
+## Introduction to PLCs
+
+A Programmable Logic Controller (PLC) is a specialized microprocessor-based controller designed for industrial automation. It stores programmed instructions to execute logical, arithmetic, and sequential functions. Unlike general-purpose computers, PLCs are optimized for real-time control tasks and operate reliably in harsh environments.
+
+### Key Features of PLCs
+
+-   **Robustness**: Designed to withstand vibrations, temperature variations, humidity, and electrical noise.
+-   **Easy Programming**: Uses intuitive programming languages such as Ladder Logic.
+-   **Interfacing Capabilities**: Provides input/output (I/O) interfaces to communicate with sensors and actuators.
+-   **Memory Storage**: Stores user programs and data.
+
+![](figures/Captura%20de%20pantalla%202025-02-19%20231722.png)
+
+## Hardware Components of a PLC
+
+A PLC consists of several key components: 1. **CPU (Central Processing Unit)**: Executes control logic based on input signals. 2. **Power Supply Unit**: Converts AC voltage to DC to power the CPU and I/O modules. 3. **Programming Device**: A computer or dedicated device used to write and monitor programs. 4. **Memory Unit**: Stores user programs and operational data. 5. **Input/Output (I/O) Modules**: Interfaces between the PLC and external devices.
+
+### Types of PLCs
+
+-   **Compact PLC**: A single unit containing all essential components.
+-   **Modular PLC**: Allows separate modules for power, processing, and I/O, providing flexibility.
+
+![](figures/Captura%20de%20pantalla%202025-02-19%20230523.png)
+
+## PLC Scan Cycle
+
+A PLC operates in a repetitive cycle: 1. **Input Scan**: Reads the status of input devices. 2. **Program Execution**: Processes logic based on the input conditions. 3. **Output Scan**: Updates the status of output devices. 4. **Housekeeping**: Manages internal operations such as diagnostics and communication.
+
+![](figures/Captura%20de%20pantalla%202025-02-19%20232122.png)
+
+## Programming a PLC
+
+### Programming Languages
+
+-   **Machine Code**
+-   **Assembly Language**
+-   **High-Level Languages (C, Pascal, BASIC)**
+-   **Ladder Logic (Most Common)**
+
+### Ladder Logic
+
+-   **Vertical rails**: Represent the power supply.
+-   **Horizontal rungs**: Define logical operations.
+-   **Contacts and coils**: Represent input conditions and outputs.
+
+![](figures/Captura%20de%20pantalla%202025-02-19%20230747.png)
+
 ## Logical Operations with Ladder Diagram
 
-GRAFCET (Graphical Functional Control Step Transition) emerged in the 70s through collaboration between PLC manufacturers and official organizations like AFCET and ADEPA. It is a graphical tool used to describe deterministic control behavior.
-
-**Insert Image \*\_\*TEST**\*\_\*\
-
-::: {style="color: red; font-weight: bold;"}
-INSERT IMAGE
-:::
-
-## Input and Output Variables, Internal Registers of PLC
-
-GRAFCET allows modeling the sequential behavior of an automated system. It describes process evolution, indicating the actions required and the information triggering them.
+GRAFCET (Graphical Functional Control Step Transition) is a graphical tool for modeling deterministic control behavior. It describes process evolution, indicating required actions and triggering information.
 
 ### Elements of GRAFCET
 
--   **Stages**: Each stage corresponds to a specific process step.
--   **Transitions**: Define the conditions to move between stages.
--   **Links**: Connect different process parts.
--   **Interpretation Elements**: Conditions necessary for process transitions.
+-   **Stages**: Define specific process steps.
 
-**Insert Image**\
+-   **Transitions**: Determine movement conditions between stages.
 
-::: {style="color: red; font-weight: bold;"}
-INSERT IMAGE
-:::
+-   **Links**: Connect different process elements.
 
-## Different Components and Instructions of PLC Programming
+    \
+    ![](figures/Captura%20de%20pantalla%202025-02-19%20230001.png)
 
-A sequential process executes an action based on the result of the previous action. Transition conditions must be met to move from one stage to another.
+## Timers and Counters in PLCs
 
-### Transition Conditions
+### Timer Functions
 
--   **Active Condition (CT\[i\] = F1)**: Activates stage *i* when signal F1 is active.
--   **Inactive Condition (CT\[i\] = F1’)**: Activates stage *i* when signal F1 is inactive.
--   **Time Condition (CT\[i\] = t/i/10 sec)**: Activates stage *i* after a time delay.
--   **Logical Condition (CT\[i\] = F1·F2’·F3)**: Activates when specific signals are met.
--   **Unconditional Condition (CT\[i\] = 1)**: Always activates the next stage.
+-   **On-Delay Timer (TON)**: Delays activation after an input signal.
 
-### Process Evolution Example
+-   **Off-Delay Timer (TOF)**: Delays deactivation after an input signal.
 
-1.  **Step 1**: The part reaches position B (sensor detects it).
-2.  **Step 2**: Conveyor moves part from A to B.
-3.  **Step 3**: Robot picks up the part.
-4.  **Step 4**: Drilling process begins.
-5.  **Step 5**: Finished part is detected and removed.
+-   **Retentive Timer (RTO)**: Holds accumulated time value.
 
-**Insert Image**\
+    ![](figures/Captura%20de%20pantalla%202025-02-19%20232345.png)
 
-::: {style="color: red; font-weight: bold;"}
-INSERT IMAGE
-:::
+### Counter Functions
 
-## Conversion from GRAFCET to Ladder Diagram
+-   **Up-Counter (CTU)**: Increments when an event occurs.
+-   **Down-Counter (CTD)**: Decrements when an event occurs.
 
--   Each stage corresponds to an internal PLC bit (B3).
--   Stages are activated and deactivated using **Latch** and **Unlatch** commands.
--   Left side conditions define activation and deactivation logic.
+![](figures/Captura%20de%20pantalla%202025-02-19%20232652.png)
 
-### Example: Traffic Light Control Using Timers
+![](figures/Captura%20de%20pantalla%202025-02-19%20232703.png)
 
-1.  **Start Button**: Initiates the sequence.
-2.  **Red Light**: Turns on for a specified duration.
-3.  **Green Light**: Turns on after Red Light.
-4.  **Yellow Light**: Activates before Red.
-5.  **Cycle Restarts**.
+## Latch and Unlatch Instructions
 
-**Insert Image**\
+Latch (Set) and Unlatch (Reset) instructions are used to maintain a state in a PLC.
 
-::: {style="color: red; font-weight: bold;"}
-INSERT IMAGE
-:::
+-   **Latch (Set)**: When activated, the output remains ON until an Unlatch is triggered.
+-   **Unlatch (Reset)**: Turns off the latched output.
 
-## Common Errors in GRAFCET Implementation
+## Sequencers in PLCs
 
-1.  **Incorrect transition conditions** leading to improper process evolution.
+Sequencers allow executing predefined step-based operations. Each step triggers an output sequence, commonly used in manufacturing processes.
+
+-   **Step-Based Execution**
+
+-   **Memory Storage for Steps**
+
+-   **Timing Control for Sequential Execution**
+
+    ![](figures/Captura%20de%20pantalla%202025-02-20%20002252.png)
+
+## Subroutines in PLCs
+
+Subroutines allow modular programming by dividing a large program into smaller, reusable blocks.
+
+-   **Efficiency Improvement**
+-   **Code Reusability**
+-   **Simplified Debugging**
+
+![](figures/Captura%20de%20pantalla%202025-02-20%20002507.png)
+
+## RSLogix and PLC Programming Software
+
+### Software Tools for PLC Programming
+
+-   **RSLinx**: Manages communication between a PLC and a PC.
+-   **RSLogix 500**: Software for editing, verifying, and simulating PLC programs.
+-   **RSLogix Emulate 500**: Allows for program testing without a physical PLC.
+
+**Getting Started with RSLinx**
+
+1.  **Run RSLinx.**
+
+2.  **Menu:**
+
+    Communications \> Configure drivers.
+
+3.  In **Available Driver Types**:
+
+    SLC 500 (DH485) Emulator Driver.
+
+4.  Click on **Add** and leave the default name.
+
+5.  Station Number: 00
+
+6.  Click **OK**.
+
+    ![](figures/Captura%20de%20pantalla%202025-02-20%20000051.png)
+
+## Example Programs in Ladder Logic
+
+### Example 1: Simple Ladder Logic Program
+
+-   **Objective**: Implement an AND gate logic using ladder diagram.
+-   **Inputs**: Two push buttons (X1, X2)
+-   **Output**: A lamp (Y1) that turns on when both buttons are pressed.
+
+## Troubleshooting and Debugging in PLCs
+
+### Common Errors
+
+1.  **Incorrect transition conditions**: Leads to improper process evolution.
 2.  **Simultaneous sequence start/end issues**.
 3.  **Nested simultaneous sequences causing execution conflicts**.
 4.  **Skipping intermediate stages unintentionally**.
 
-## Practical Exercises
+## Conclusion
 
-### Exercise 1: Convert the Following Sequence to Ladder Diagram
-
--   **Sequence**: B+ → A+ → A- → A+ → B- → A-
-
-### Exercise 2: Crane Control System
-
--   **Four limit switches**: Two for horizontal movement (S3, S4) and two for vertical (S1, S2).
--   **Motors**: Two dual-direction motors controlling crane movement.
--   **Process Flow**:
-    -   Move crane to pickup position.
-    -   Lift part using vertical motor.
-    -   Transport to destination.
-    -   Lower and release part.
-
-**Insert Image**\
-
-::: {style="color: red; font-weight: bold;"}
-INSERT IMAGE
-:::
-
-*Note: Replace INSERT IMAGE with actual images related to each section.*
+PLCs are essential in industrial automation, offering robustness, flexibility, and efficiency in process control. By mastering programming techniques and logical operations, engineers can optimize automation systems and improve productivity.
