--- a/chapter02.qmd
+++ b/chapter02.qmd
@@ -1,4 +1,3 @@
-
 ## Elements of a pneumatic circuit
 
 The word ‘Pneumatics’ is derived from the Greek ‘neuma’ (air or breath). Originally, the term pneumatics designated the science of the movement and properties of air. This is the branch of engineering that deals with the study and application of compressed air, its generation, transmission and control.
@@ -19,21 +18,19 @@ The design of devices that used air energy dates back to the 18th century (with 
 
 #### Comparison with other technologies
 
-+--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+-----------+
-|  **Leaks**                 | **Electricity**                                                                |**Hydraulic**                                                                  | **Pneumatic**                                                             |           |
-|                          |                                                                                |                                                                                |                                                                           |           |
-|                          |                                                                                | Pollution                                                                      | Apart from energy loss, no disadvantages.                                 |           |
-+--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+-----------+
-|                          |                                                                                |                                                                                |                                                                           |           |
-+--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+-----------+
-| Environmental influences | Explosion hazard in certain environments; relatively sensitive to temperature. | Sensitive to temperature fluctuations; Fire hazard in case of leaks.           | Does not cause explosions; Insensitive to temperatures.                   |           |
-+--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+-----------+
-| Energy storage           | Difficult and only in small quantities using batteries                         | Within certain limits, using gases                                             | Easy                                                                      |           |
-+--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+-----------+
-| Energy transport         | Unlimited, but with energy loss                                                | Up to 100 m with flow velocity of v = 2-6 m/s, signal velocity up to 1000 m/s. | Up to 1000 m with flow velocity v = 20-40 m/s, signal velocity 20-40 m/s. |           |
-+--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+-----------+
-| Working speed            |                                                                                | v = 0.5 m/s                                                                    | v = 1.5 m/s                                                               |           |
-+--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+-----------+
++--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+------------+------------+-----------+
+|                          | **Electricity**                                                                | **Hydraulic**                                                                  | **Pneumatic**                                                             |            |            |           |
++--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+------------+------------+-----------+
+| Leaks                    |                                                                                | Pollution                                                                      | Apart from energy loss, no disadvantages.                                 |            |            |           |
++--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+------------+------------+-----------+
+| Environmental influences | Explosion hazard in certain environments; relatively sensitive to temperature. | Sensitive to temperature fluctuations; Fire hazard in case of leaks.           | Does not cause explosions; Insensitive to temperatures.                   |            |            |           |
++--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+------------+------------+-----------+
+| Energy storage           | Difficult and only in small quantities using batteries                         | Within certain limits, using gases                                             | Easy                                                                      |            |            |           |
++--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+------------+------------+-----------+
+| Energy transport         | Unlimited, but with energy loss                                                | Up to 100 m with flow velocity of v = 2-6 m/s, signal velocity up to 1000 m/s. | Up to 1000 m with flow velocity v = 20-40 m/s, signal velocity 20-40 m/s. |            |            |           |
++--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+------------+------------+-----------+
+| Working speed            |                                                                                | v = 0.5 m/s                                                                    | v = 1.5 m/s                                                               |            |            |           |
++--------------------------+--------------------------------------------------------------------------------+--------------------------------------------------------------------------------+---------------------------------------------------------------------------+------------+------------+-----------+
 
 : Comparison with other technologies
 
